--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,15 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Balanzas
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <h4>Balanza 1: {{ pesoBalanza1 }}</h4>
+  <h4>Balanza 2: {{ pesoBalanza2 }}</h4>
+  <h4>Balanza 3: {{ pesoBalanza3 }}</h4>
+  <h4>Balanza 4: {{ pesoBalanza4 }}</h4>
+  <h4>Balanza 5: {{ pesoBalanza5 }}</h4>
 </ion-content>
